--- a/.gitlab-ci-template.yml
+++ b/.gitlab-ci-template.yml
@@ -12,11 +12,19 @@ variables:
   MOODLE_REPO: "$MOODLE_WORKPLACE_REPO"
   MOODLE_REPO_LMS: "https://github.com/moodle/moodle.git"
   # Moodle branches.
-  MOODLE_BRANCH_WORKPLACE403S: WORKPLACE_403
-  MOODLE_BRANCH_WORKPLACE402S: WORKPLACE_402
+  # Workplace.
+  MOODLE_BRANCH_WORKPLACE404S: WORKPLACE_404_1
+  MOODLE_BRANCH_WORKPLACE403S: WORKPLACE_403_5
+  MOODLE_BRANCH_WORKPLACE402S: WORKPLACE_402_8
   MOODLE_BRANCH_WORKPLACE401S: WORKPLACE_401_0
-  MOODLE_BRANCH_LMS39: MOODLE_39_STABLE
+  # LMS.
+  MOODLE_BRANCH_LMS404: MOODLE_404_STABLE
+  MOODLE_BRANCH_LMS403: MOODLE_403_STABLE
+  MOODLE_BRANCH_LMS402: MOODLE_402_STABLE
   MOODLE_BRANCH_LMS401: MOODLE_401_STABLE
+  MOODLE_BRANCH_LMS400: MOODLE_400_STABLE
+  MOODLE_BRANCH_LMS39: MOODLE_39_STABLE
+  # Selenium.
   MOODLE_BEHAT_WDHOST: "http://selenium-standalone-chrome:4444/wd/hub"
   MOODLE_START_BEHAT_SERVERS: "NO"
   # Database.
