--- a/.gitlab-ci-template.yml
+++ b/.gitlab-ci-template.yml
@@ -12,6 +12,7 @@ variables:
   MOODLE_REPO: "https://github.com/moodle/moodle.git"
   # Moodle branches.
   # Workplace.
+  MOODLE_BRANCH_WORKPLACE405S: WORKPLACE_405_0
   MOODLE_BRANCH_WORKPLACE404S: WORKPLACE_404_3
   MOODLE_BRANCH_WORKPLACE403S: WORKPLACE_403_7
   MOODLE_BRANCH_WORKPLACE402S: WORKPLACE_402_10
