--- a/.gitlab-ci-template.yml
+++ b/.gitlab-ci-template.yml
@@ -18,6 +18,7 @@ variables:
   MOODLE_BRANCH_WORKPLACE402S: WORKPLACE_402_10
   MOODLE_BRANCH_WORKPLACE401S: WORKPLACE_401_13
   # LMS.
+  MOODLE_BRANCH_LMS404: MOODLE_405_STABLE
   MOODLE_BRANCH_LMS404: MOODLE_404_STABLE
   MOODLE_BRANCH_LMS403: MOODLE_403_STABLE
   MOODLE_BRANCH_LMS402: MOODLE_402_STABLE
