--- a/.gitlab-ci-template.yml
+++ b/.gitlab-ci-template.yml
@@ -1,17 +1,24 @@
+## Gitlab CI/CD template for Moodle plugins By Ldesign Media.
+## Author: Hamza Tamyachte
+## Copyright 17/07/2024 Mfreak.nl | LdesignMedia.nl - Luuk Verhoeven
+
 services:
   - mysql:latest
   - name: selenium/standalone-chrome:3
     alias: selenium-standalone-chrome
-
 variables:
   PHP_VERSION: "8.0"
   TRAVIS_BUILD_DIR: "$CI_PROJECT_DIR"
   MOODLE_REPO: "https://github.com/moodle/moodle.git"
+
+  # Workplace branches
   MOODLE_BRANCH_WORKPLACE405S: WORKPLACE_405_0
   MOODLE_BRANCH_WORKPLACE404S: WORKPLACE_404_3
   MOODLE_BRANCH_WORKPLACE403S: WORKPLACE_403_7
   MOODLE_BRANCH_WORKPLACE402S: WORKPLACE_402_10
   MOODLE_BRANCH_WORKPLACE401S: WORKPLACE_401_13
+
+  # Moodle branches
   MOODLE_BRANCH_LMS405: MOODLE_405_STABLE
   MOODLE_BRANCH_LMS404: MOODLE_404_STABLE
   MOODLE_BRANCH_LMS403: MOODLE_403_STABLE
@@ -19,8 +26,12 @@ variables:
   MOODLE_BRANCH_LMS401: MOODLE_401_STABLE
   MOODLE_BRANCH_LMS400: MOODLE_400_STABLE
   MOODLE_BRANCH_LMS39: MOODLE_39_STABLE
+
+  # Selenium configuration
   MOODLE_BEHAT_WDHOST: "http://selenium-standalone-chrome:4444/wd/hub"
   MOODLE_START_BEHAT_SERVERS: "NO"
+
+  # Database configuration
   DB: "mysqli"
   MYSQL_ROOT_PASSWORD: "superrootpass"
   MYSQL_ALLOW_EMPTY_PASSWORD: "true"
@@ -29,7 +40,7 @@ variables:
   image: moodlehq/moodle-workplace-plugin-ci:$PHP_VERSION
   script:
     - echo -e "section_start:$(date +%s):env[collapsed=true]\r"
-    - |
+      - |
       if [ -f styles.scss ]; then
         echo "Removing styles.scss"
         rm -f styles.scss
@@ -40,7 +51,8 @@ variables:
     - cd $CI_PROJECT_DIR/..
     - echo $MOODLE_REPO
     - rm -rf moodle
-    - export IPADDRESS=`grep "${HOSTNAME}$" /etc/hosts | awk '{print $1}'`
+    # Install Moodle includes the setup of PHPUnit and Behat when tests exist in the plugin directory.
+    - export IPADDRESS=`grep "${HOSTNAME}$" /etc/hosts |awk '{print $1}'`
     - export MOODLE_BEHAT_WWWROOT="http://${IPADDRESS}:8000"
     - moodle-plugin-ci install --db-user=root --db-pass=superrootpass --db-host=mysql -vvv
     - cd moodle
@@ -48,17 +60,30 @@ variables:
     - echo -e "section_end:$(date +%s):env\r"
     - |
       ORANGE='\033[38;5;214m'
+      RED='\033[31m'
       RESET='\033[0m'
-      run_with_error_handling() {
-        local command="$1"
-        local allow_errors_var="$2"
-        local allow_errors_value="${!allow_errors_var}"
-        if [ "$allow_errors_value" = "true" ]; then
-          eval "$command" || true
-          echo -e "${ORANGE}-- ${command^^} We are skipping errors (we ignore errors in these checks).${RESET}"
+      
+      highlight_errors() {
+        while IFS= read -r line; do
+        if echo "$line" | grep -q "ERROR"; then
+          echo -e "${RED}${line}${RESET}"
         else
-          echo -e "${ORANGE}-- ${command^^}${RESET}"
-          eval "$command"
+          echo "$line"
+        fi
+        done
+      }
+
+      run_with_error_handling() {
+        local test_command="$1"
+        local allow_errors_var="$2"
+        local allow_errors="${!allow_errors_var}"
+        
+        if [ "$allow_errors" = "true" ]; then
+          eval "$test_command" 2>&1 | highlight_errors || true
+          echo -e "${ORANGE}Test ${test_command} completed with errors (ignored).${RESET}"
+        else
+          eval "$test_command" 2>&1 | highlight_errors
+          echo -e "${ORANGE}Test ${test_command} completed successfully.${RESET}"
         fi
       }
       
