--- a/.gitlab-ci-template.yml
+++ b/.gitlab-ci-template.yml
@@ -40,13 +40,7 @@ variables:
   image: moodlehq/moodle-workplace-plugin-ci:$PHP_VERSION
   script:
     - echo -e "section_start:$(date +%s):env[collapsed=true]\r"
-    - |
-        if [ -f styles.scss ]; then
-          echo "Removing styles.scss"
-          rm -f styles.scss
-        else
-          echo "styles.scss not found, skipping."
-        fi
+    - if [ -f styles.scss ]; then echo "Removing styles.scss"; rm -f styles.scss; else echo "styles.scss not found, skipping."; fi
     - apt update && apt install -y mariadb-client
     - cd $CI_PROJECT_DIR/..
     - echo $MOODLE_REPO
