--- a/.gitlab-ci-template.yml
+++ b/.gitlab-ci-template.yml
@@ -20,6 +20,7 @@ variables:
 
   # Moodle branches
   MOODLE_BRANCH_LATEST: main
+  MOODLE_BRANCH_LMS500: MOODLE_500_STABLE
   MOODLE_BRANCH_LMS405: MOODLE_405_STABLE
   MOODLE_BRANCH_LMS404: MOODLE_404_STABLE
   MOODLE_BRANCH_LMS403: MOODLE_403_STABLE
