Update #86c3ddduu - Add privacy provider testing to GitLab CI template

--- a/.gitlab-ci-template.yml
+++ b/.gitlab-ci-template.yml
@@ -155,6 +155,7 @@ variables:
       # we skip stylelint check as it is not reliable, and not support css on other places.
       run_with_error_handling "moodle-plugin-ci phpdoc" "ALLOW_ERRORS_PHPDOC"
       run_with_error_handling "moodle-plugin-ci phpunit" "ALLOW_ERRORS_PHPUNIT"
+      run_with_error_handling "vendor/bin/phpunit --colors --no-coverage --testsuite tool_dataprivacy_testsuite,tool_policy_testsuite,core_privacy_testsuite" "ALLOW_ERRORS_PRIVACY"
       run_with_error_handling "moodle-plugin-ci behat --suite default --profile chrome" "ALLOW_ERRORS_BEHAT"
   allow_failure: true
   except:
