Update #86c3ddduf - Revert db schema check

--- a/.gitlab-ci-template.yml
+++ b/.gitlab-ci-template.yml
@@ -40,6 +40,9 @@ variables:
   MYSQL_ROOT_PASSWORD: "superrootpass"
   MYSQL_ALLOW_EMPTY_PASSWORD: "true"
 
+  # Allow errors configuration
+  ALLOW_ERRORS_DATABASE_SCHEMA: "true"
+
 .scriptshorttest: &scriptshorttest
   image: moodlehq/moodle-workplace-plugin-ci:$PHP_VERSION
   script:
@@ -138,6 +141,7 @@ variables:
       run_with_error_handling "moodle-plugin-ci phpunit --testsuite tool_dataprivacy_testsuite,tool_policy_testsuite,core_privacy_testsuite" "ALLOW_ERRORS_PRIVACY"
       run_with_error_handling "moodle-plugin-ci behat --suite default --profile chrome" "ALLOW_ERRORS_BEHAT"
       run_with_error_handling "moodle-plugin-ci behat --auto-rerun=0 --profile chrome --tags=@tool_xmldb" "ALLOW_ERRORS_XMLDB"
+      run_with_error_handling "php admin/cli/check_database_schema.php" "ALLOW_ERRORS_DATABASE_SCHEMA"
   allow_failure: true
   except:
     - tags
